@@ -1,3 +1,13 @@
+2014-06-05  eig  <eig114@gmail.com>
+
+	* Main.cs: Упорядочивание вывода по шансу совпадения
+
+	* ProfileExtensions.cs: Правки по вычислениям. Функции от
+	  нескольких профилей теперь возвращают шанс того, что данный
+	  профиль - автор.
+
+	* Profile.cs: 
+
 2014-05-29  eig  <eig114@gmail.com>
 
 	* NGrams.pidb: 
